# claritynlp-nova

./: README.md  docker-compose.localhost.yml
native_setup/: conda_pip_requirements.txt  conda_requirements.txt  configure_solr.py  new_requirements.txt~  strings_to_json.py
nlp/: Dockerfile  claritynlp_logging.py  conda_requirements.txt  config.py  diff_output.txt  hypercorn_config.toml  luigi_module.py  util.py
nlp/algorithms/context/: context.py  context_test.py  readme_context.md
nlp/algorithms/finder/: subject_finder.py
nlp/algorithms/sec_tag/: concept_graph.py  sec_tag_db_extract.py  sec_tag_file.py  section_tagger.py
nlp/algorithms/sec_tag/data/: graph.txt  (+1 more)
nlp/algorithms/segmentation/: segmentation.py
nlp/apis/: phenotype_apis.py
nlp/custom_tasks/: LanguageModelAPITask.py  SectionFinderTask.py  __init__.py
nlp/data_access/: base_model.py  filesystem_data.py  memory_data.py  phenotype.py  report.py  tuple_processor.py
nlp/luigi_tools/: luigi_runner.py  phenotype_helper.py
nlp/nlpql/: nlpql.py  nlpql_lexer.interp  nlpql_lexer.py  nlpql_parser.interp  nlpql_parserParser.py
nlp/tasks/: __init__.py  registered_tasks.py  task_utilities.py
utilities/nlp-mongo/: Dockerfile.prod
utilities/nlp-postgres/: Dockerfile.txt
utilities/nlpaas/: .gitignore  Dockerfile  api.py  main.py  models.py  poetry_run_hypercorn.sh  pyproject.toml  requirements.txt  util.py  worker.py
utilities/nlpaas/nlpql/: Pregnancy_v1.nlpql  SyphilisDiagnoses_v1.nlpql  Syphilis_Diagnoses_v1.nlpql  Syphilis_Regex_Test_v1.nlpql  Syphilis_Symptoms_v1.nlpql  Syphilis_Test_v1.nlpql
(+1 files in other folders)
