[tool.poetry]
name = "claritynlpaas-lite"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.79.0"
"fhir.resources" = "6.4.0"
hypercorn = {extras = ["uvloop"], version = "^0.14.4"}
httptools = "0.4.0"
pymongo = "4.2.0"
python-dotenv = "0.20.0"
PyYaml = "6.0"
requests = "^2.31.0"
uvicorn = "0.18.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 200